umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_ethyleneglycol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h2#v2" "C#h2#v2" "O#h#n2#v" "O#h#n2#v"]
      :bonds [[0 1 :single] [0 2 :single] [1 3 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h2#v2" "C#h2#v2" "O#h#n2#v" "O#h#n2#v"]
      :bonds [[0 1 :single] [0 2 :single] [1 3 :single]]}
    :success true}}
