umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_glycerol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h2#v2" "C#h#v3" "C#h2#v2" "O#h#n2#v" "O#h#n2#v" "O#h#n2#v"]
      :bonds [[0 1 :single] [1 2 :single] [0 3 :single] [1 4 :single] [2 5 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h2#v2" "C#h#v3" "C#h2#v2" "O#h#n2#v" "O#h#n2#v" "O#h#n2#v"]
      :bonds [[0 1 :single] [1 2 :single] [0 3 :single] [1 4 :single] [2 5 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}}
