umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methanediol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {:atoms ["C#h2#v2" "O#h#n2#v" "O#h#n2#v"] :bonds [[0 1 "1"] [0 2 "1"]]}
    :success true}
  :counts {
    :output {:atoms ["C#h2#v2" "O#h#n2#v" "O#h#n2#v"] :bonds [[0 1 "1"] [0 2 "1"]]}
    :success true}}
