umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-azide.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "N#n#v3" "N#c+#v4" "N#c-#n2#v2"]
      :bonds [[0 1 "1"] [1 2 "2"] [2 3 "2"]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "N#n#v3" "N#c+#v4" "N#c-#n2#v2"]
      :bonds [[0 1 "1"] [1 2 "2"] [2 3 "2"]]}
    :success true}}
